--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@
 ################################################################################
 
 /Zipcodes_ASPNET_NEW/.vs
+/Zipcodes_ASPNET_NEW/bin
+/Zipcodes_ASPNET_NEW/obj
