--- a/Zipcodes_ASPNET_NEW/Zipcodes_ASPNET.csproj
+++ b/Zipcodes_ASPNET_NEW/Zipcodes_ASPNET.csproj
@@ -6,11 +6,9 @@
 
   <ItemGroup>
     <PackageReference Include="bootstrap" Version="4.1.0" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="5.0.7">
-      <PrivateAssets>all</PrivateAssets>
-      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-    </PackageReference>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite.Core" Version="5.0.7" />
     <PackageReference Include="MySql.EntityFrameworkCore" Version="5.0.3.1" />
+    <PackageReference Include="System.Data.SQLite" Version="1.0.114.4" />
   </ItemGroup>
 
 </Project>
